# PrimeFactorizationIn-C

./: CMakeLists.txt  primeFactorization.c  primeFactorization.h
tests/: CMakeLists.txt  primeFactorizationTests.c
